--- a/Equalizator/app/src/main/res/menu/menu_main.xml
+++ b/Equalizator/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/menu_saveImage"
-        android:orderInCategory="1"
+        android:orderInCategory="3"
         android:title="@string/menu_saveImage_string"
         app:showAsAction="never" />
 
@@ -13,6 +13,12 @@
         android:id="@+id/menu_equalize"
         android:orderInCategory="2"
         android:title="@string/menu_equalizeString"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_grayscale"
+        android:orderInCategory="1"
+        android:title="@string/menu_grayscaleString"
         app:showAsAction="never" />
 
 </menu>
